tests/paczka1/small_fuzzy/42437283.err
Error in line 1: PD2NIC2Z53N A146 44,3
Error in line 10: ttl2sRQ3bq S596 76,6
Error in line 13: ttl2sRQ3bq A799 97,1
Error in line 14: ttl2sRQ3bq A146 3,3
